# python-project

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
common/utils/: time_utils.py
eplus/: DVC_PARAM_ANALYSIS.md  eplus_auto.py  eplus_gui.py  main.py
klook/: api.py  config.py  main.py
klook-web/: .gitignore  DOCKER_DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.yml
klook-web/backend/: Dockerfile  main.py  requirements.txt
klook-web/backend/app/api/: config.py  health.py  log.py  program.py  task.py  websocket.py
klook-web/backend/app/core/: config.py  klook_client.py  timer.py  websocket_manager.py
klook-web/backend/app/models/: config.py  log.py  program.py  task.py
klook-web/backend/app/services/: task_executor.py
klook-web/backend/app/storage/: config_store.py  database.py  log_store.py  models.py  program_store.py  task_store.py
klook-web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
klook-web/frontend/src/: App.vue  main.js
klook-web/frontend/src/api/: config.js  log.js  program.js  task.js
klook-web/frontend/src/components/: TaskCountdown.vue
mcc/: api.py  config.py  main.py
miniso/: api.py  chiikawa.py  config.json  config.py  encryption_utils.py  generate_page.py  main.py
ticket/miniso/chiikawa/: chiikawa.py  config.py  utils.py
ticket/sky/: api.py  config.py  sky.py
ticket/tinyroll/: config.py  tinyroll.py
ticket/youzan/: api.py  youzan.py
trip/: api.py  main.py
youzan/: README.md  api.py  check.py  config.py  main.py  rush_buy.py  setup.py
(+8 files in other folders)
