[project]
name = "python-project"
version = "0.1.0"
description = "Playground and cheatsheet for learning Python. Collection of Python scripts that are split by topics and contain code examples with explanations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirerpy>=0.3.4",
    "requests>=2.32.5",
    # klook-web backend dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "python-multipart>=0.0.6",
    "greenlet>=3.0.0",
]
